# red-detection

./: CMakeLists.txt  main.cpp
